force-app/main/default/objects/Course_Admission_Status_Rule__mdt.object
<CustomObject>
    <fields>
        <fullName>Conditional_Offer_Status__c</fullName>
        <label>Conditional Offer Status</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Admission_Status__c</fullName>
        <label>Course Admission Status</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deferment_Status__c</fullName>
        <label>Deferment Status</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Documentation_Status__c</fullName>
        <label>Documentation Status</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entry_Qualification_Status__c</fullName>
        <label>Entry Qualification Status</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Response_Status__c</fullName>
        <label>Offer Response Status</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome_Status__c</fullName>
        <label>Outcome Status</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Course Admission Status Rule</label>
    <listViews>
        <fullName>All_Fields</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Course_Admission_Status__c</columns>
        <columns>Conditional_Offer_Status__c</columns>
        <columns>Deferment_Status__c</columns>
        <columns>Documentation_Status__c</columns>
        <columns>Entry_Qualification_Status__c</columns>
        <columns>Offer_Response_Status__c</columns>
        <columns>Outcome_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Fields</label>
    </listViews>
    <pluralLabel>Course Admission Status Rules</pluralLabel>
</CustomObject>